--- a/App.config
+++ b/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<appSettings>
-		<add key="connectionString" value="Data Source=localhost; Initial Catalog=bricsrepair; User ID=sa; Password=1Secure*Password1"/>
+		<add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database\db.mdf;Integrated Security=True"/>
 	</appSettings>
 </configuration>
