changed connection string

--- a/App.config
+++ b/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<appSettings>
-		<add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Joel\Desktop\Assignment\IOOP-Assignment\Database\db.mdf;Integrated Security=True"/>
+		<add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\chanw\Desktop\Visual Studio Projects\IOOP Assignment\Database\db.mdf;Integrated Security=True"/>
 	</appSettings>
 </configuration>
