--- a/App.config
+++ b/App.config
@@ -3,7 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="HaowenCS" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='C:\Users\User\Documents\APU\Year 1 Sem 2\Introduction to Object Oriented Programming\Assignment\Github clone\Database\Haowendb.mdf';Integrated Security=True" 
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
 	<appSettings>
-		<add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database\db.mdf;Integrated Security=True"/>
+		<add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='C:\Users\User\Documents\APU\Year 1 Sem 2\Introduction to Object Oriented Programming\Assignment\Github clone\Database\Haowendb.mdf';Integrated Security=True"/>
 	</appSettings>
 </configuration>
