code refactor proposal for johan

--- a/App.config
+++ b/App.config
@@ -3,11 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-	<connectionStrings>
-		<add name="JohanCS" connectionString='Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="C:\Users\Johan\Desktop\Software Engineering\Year 1 - SEM 2\IOOP\Assignment\IOOP Assignment - Admin\Admin database\JohanDB.mdf";Integrated Security=True'
-		providerName="System.Data.SqlClient" />
-	</connectionStrings>
 	<appSettings>
-		<add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Johan\Desktop\Software Engineering\Year 1 - SEM 2\IOOP\Assignment\IOOP Assignment - Admin\Admin database\JohanDB.mdf;Integrated Security=True"/>
+		<add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Joel\Desktop\Assignment\IOOP-Assignment\Database\db.mdf;Integrated Security=True"/>
 	</appSettings>
 </configuration>
