remove unrequired files resize login form

--- a/Assignment.csproj
+++ b/Assignment.csproj
@@ -106,11 +106,6 @@
     <Compile Include="Forms\Receptionist\FormRNewCus.Designer.cs">
       <DependentUpon>FormRNewCus.cs</DependentUpon>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="src\BetterSqlCommand.cs" />
     <Compile Include="src\CompletedService.cs" />
     <Compile Include="src\Database.cs" />
@@ -204,10 +199,6 @@
     <EmbeddedResource Include="Forms\Technician\FormTHome.resx">
       <DependentUpon>FormTHome.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -236,6 +227,14 @@
   <ItemGroup>
     <Folder Include="assets\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Database\db.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Database\db_log.ldf">
+      <DependentUpon>db.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
